--- a/_templates/globaltoc.html
+++ b/_templates/globaltoc.html
@@ -7,6 +7,5 @@
     :copyright: Copyright 2007-2013 by the Sphinx team, see AUTHORS.
     :license: BSD, see LICENSE for details.
 #}
-<h3><a href="{{ pathto(master_doc) }}">{{ _('Table Of Contents') }}</a></h3>
+<!--<h3><a href="{{ pathto(master_doc) }}">{{ _('NADA') }}</a></h3>-->
 {{ toctree() }}
--x-x-global-toc-x-x-
